--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="styles.css">
     <title>Explore-Bangladesh</title>
 </head>
-<body>
-    
+<body class="container">
+    <header>
+        <nav>
+            <div class="logo">Bangladesh 2.0</div>
+            <button class="signin-btn">Sign In</button>
+        </nav>
+    </header>
 </body>
 </html>
