--- a/index.html
+++ b/index.html
@@ -13,5 +13,50 @@
             <button class="signin-btn">Sign In</button>
         </nav>
     </header>
+
+    <!-- section one -->
+     <section class="section-one">
+        <div class="hero">
+            <div>
+                <h5>Bangladesh 2.0</h5>
+                <h1>Idea, Innovation, <br> Vision and Challenges in <br> New Bangladesh</h1>
+                <button class="explore-btn">Explore Bangladesh</button>
+            </div>
+            <div>
+                <img src="assets/hero.png" alt="hero-img">
+            </div>
+        </div>
+     </section>
+
+     <!-- section two -->
+      <section class="section-two">
+
+        <div class="pillar-head">
+            <h1>Pillars of 'Bangladesh 2.0"</h1>
+        </div>
+        <div class="Innovation-divs">
+            <div class="pillar-divs">
+            <img src="assets/card-icon.png" alt="card-icon">
+            <h4>Innovation</h4>
+            <p>Lorem ipsum, dolor sit amet <br> consectetur adipisicing elit. <br> Corporis, sapiente.</p>
+        </div>
+        <div class="pillar-divs">
+            <img src="assets/card-icon.png" alt="card-icon">
+            <h4>Innovation</h4>
+            <p>Lorem ipsum, dolor sit amet <br> consectetur adipisicing elit. <br> Corporis, sapiente.</p>
+        </div>
+        <div class="pillar-divs">
+            <img src="assets/card-icon.png" alt="card-icon">
+            <h4>Innovation</h4>
+            <p>Lorem ipsum, dolor sit amet <br> consectetur adipisicing elit. <br> Corporis, sapiente.</p>
+        </div>
+        <div class="pillar-divs">
+            <img src="assets/card-icon.png" alt="card-icon">
+            <h4>Innovation</h4>
+            <p>Lorem ipsum, dolor sit amet <br> consectetur adipisicing elit. <br> Corporis, sapiente.</p>
+        </div>
+        </div>
+        
+      </section>
 </body>
 </html>
