section five added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Explore-Bangladesh</title>
 </head>
 <body class="container">
@@ -101,6 +102,31 @@
                 <h4>Dr. Muhammad Yunus</h4>
                 <h5>Chief Adviser of the People's Republic of Bangladesh</h5>
             </div>
+        </section>
+
+
+        <!-- section five  -->
+
+        
+
+        <section class="section-five">
+            <table style="width:100%">
+                    <tr>
+                        <th class="table-head">Questions</th>
+                        <th class="table-head">Select Your Opinions</th> 
+                    <tr>
+                        <th>Do you believe Bangladesh is on the right path toward becoming a developed nation?</th>
+                        <td> <button>Yes, I agree <i class="fa-solid fa-angle-down"></i></button> </td>
+                    </tr>
+                    <tr>
+                        <th>Do you believe Bangladesh is on the right path toward becoming a developed nation?</th>
+                        <td> <button>Yes, I agree <i class="fa-solid fa-angle-down"></i></button> </td>
+                    </tr>
+                    <tr>
+                        <th>Do you believe Bangladesh is on the right path toward becoming a developed nation?</th>
+                        <td > <button>Yes, I agree <i class="fa-solid fa-angle-down"></i></button> </td>
+                    </tr>
+            </table>
         </section>
 </body>
 </html>
